added front-metro submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "back/md"]
 	path = back/md
 	url = https://github.com/michelf/php-markdown.git
+[submodule "front-metro"]
+	path = front-metro
+	url = https://github.com/coderfox/ToiletCrazy_Metro.git
